--- a/src/app/home.module.scss
+++ b/src/app/home.module.scss
@@ -1,10 +1,10 @@
 .home {
   position: relative;
-  top: 80vh;
+  margin-top: 90vh;
 }
 .FirstSectionHome {
   max-width: 1148px;
-  margin: 0 auto 6rem auto;
+  margin: 0 auto 10rem auto;
   position: relative;
   overflow: hidden;
   &__image {
