--- a/src/app/components/navbar/nav.module.scss
+++ b/src/app/components/navbar/nav.module.scss
@@ -1,6 +1,7 @@
 .header {
   position: relative;
   background: linear-gradient(rgb(10, 43, 82) 7%, rgb(50 92 175 / 0%) 100%);
+  padding: 0 1rem;
 }
 .mainNavBar {
   display: flex;
