--- a/src/app/home.module.scss
+++ b/src/app/home.module.scss
@@ -2,6 +2,14 @@
   position: relative;
   margin-top: 90vh;
 }
+.FirstSectionHome,
+.secondSectionHome,
+.thirdSectionHome,
+.fourthSectionHome {
+  @media #{$large} {
+    padding: 0 1rem;
+  }
+}
 .FirstSectionHome {
   max-width: 1148px;
   margin: 0 auto 10rem auto;
@@ -48,6 +56,11 @@
   max-width: 1411px;
   margin: 0 auto 6rem auto;
   position: relative;
+  > h2 {
+    @media #{$laptop} {
+      text-align: center;
+    }
+  }
   &__mainText {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -92,6 +105,7 @@
   overflow: hidden;
   position: relative;
   padding-top: 62px;
+
   &__background {
     position: absolute;
     bottom: 0;
@@ -109,6 +123,9 @@
     &__text {
       max-width: 856px;
       margin: 3rem 0;
+      @media #{$laptop} {
+        padding-left: 2rem;
+      }
       h2 {
         color: white;
         margin-top: 0;
@@ -128,10 +145,10 @@
       position: relative;
       top: -60px;
       width: 450px;
-
+      flex-shrink: 0;
       img {
         position: absolute;
-        width: 450px;
+        width: 100%;
         height: auto;
         top: 0;
         object-fit: cover;
@@ -147,6 +164,9 @@
         z-index: 0;
         transform: skew(337deg, 0deg);
         margin-right: -490px;
+        @media #{$laptop} {
+          display: none;
+        }
       }
     }
   }
