--- a/src/app/components/footer/footer.module.scss
+++ b/src/app/components/footer/footer.module.scss
@@ -5,7 +5,7 @@
   color: white;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  padding: 2rem;
+  padding: 4rem 2rem;
   justify-items: center;
   align-items: end;
   font-size: 19px;
