--- a/src/app/components/hero/hero.module.scss
+++ b/src/app/components/hero/hero.module.scss
@@ -18,9 +18,17 @@
     transform: translate(-46%, -50%);
     text-align: center;
     color: white;
+    @media #{$landscape} {
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
     ul {
       display: flex;
       gap: 1rem;
+      @media #{$landscape} {
+        flex-direction: column;
+        gap: 0;
+      }
 
       li {
         font-size: 4rem;
