--- a/src/app/components/navbar/nav.module.scss
+++ b/src/app/components/navbar/nav.module.scss
@@ -14,6 +14,7 @@
   gap: 2rem;
   padding-top: 2rem;
   padding-bottom: 5rem;
+
   &__navBlock {
     flex: 1;
     display: flex;
@@ -25,6 +26,9 @@
     }
     &__topData {
       text-transform: uppercase;
+      @media #{$landscape} {
+        display: none;
+      }
     }
     &__nav {
       display: flex;
@@ -39,8 +43,46 @@
           color: #e5794b;
         }
       }
+      @media #{$landscape} {
+        display: none;
+      }
     }
   }
   &__logo {
+  }
+}
+.burger {
+  display: none;
+  font-size: 1.5rem;
+  @media #{$landscape} {
+    display: block;
+  }
+}
+.navMobile {
+  position: fixed;
+  display: flex;
+  top: 0;
+  left: 0;
+  background-color: $blue;
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  justify-content: flex-start;
+  padding-top: 3rem;
+  flex-direction: column;
+  font-size: 1.5rem;
+  z-index: 100;
+  ul {
+    margin: 1rem 0;
+    text-align: center;
+  }
+  &__generic {
+    font-size: 1rem;
+    padding: 1rem;
+    text-align: center;
+  }
+  a {
+    color: white;
+    text-decoration: underline;
   }
 }
