--- a/src/app/sass/global.scss
+++ b/src/app/sass/global.scss
@@ -9,6 +9,15 @@ h2 {
   font-weight: 400;
   font-size: 50px;
   margin-bottom: 2rem;
+  &:first-line {
+    text-indent: none;
+  }
+  @media #{$landscape} {
+    font-size: 40px;
+    text-indent: -40px;
+    padding-left: 40px;
+    line-height: 1;
+  }
 }
 
 ul {
@@ -21,6 +30,10 @@ p {
   font-weight: 200;
   margin: 0;
   line-height: $size-p + ($size-p/2);
+  @media #{$landscape} {
+    font-size: $size-p / 1.1;
+    padding: 0 1rem;
+  }
 }
 button {
   margin: 2rem 0;
