--- a/src/app/sass/vars.scss
+++ b/src/app/sass/vars.scss
@@ -2,6 +2,7 @@
 $orange: #e5794b;
 $blue: #485f7d;
 $darkblue: #3b4e67;
+$navyBlue: #092b51;
 $green: #7dbc77;
 $red: #ed0423;
 $lightBlue: #c7e4f5;
@@ -13,6 +14,7 @@ $grey: #c8c8c8;
 /*FONTS*/
 $size-navbar: 14px;
 $size-p: 22px;
+$pageSubtitle: 32px;
 /*MEDIA QUERY*/
 $phone: "only screen and (max-width : 460px)";
 $tablet: "only screen and (max-width : 720px)";
