--- a/src/app/components/accordion/accordion.scss
+++ b/src/app/components/accordion/accordion.scss
@@ -1,9 +1,11 @@
 .accordion {
+  margin-top: 2rem;
   h3 {
     font-size: $pageSubtitle;
     margin-bottom: 0;
     margin-top: 1rem;
     cursor: pointer;
+    background: aliceblue;
   }
 
   li {
