--- a/src/app/components/cards/cardsLavora.module.scss
+++ b/src/app/components/cards/cardsLavora.module.scss
@@ -2,6 +2,17 @@
   display: flex;
   gap: 3rem;
   margin-bottom: 4rem;
+  @media #{$tablet} {
+    flex-direction: column;
+  }
+  &__image {
+    max-width: 535px;
+    width: 100%;
+    object-fit: cover;
+    @media #{$tablet} {
+      max-width: 100%;
+    }
+  }
   a {
     color: black;
     h3 {
@@ -10,8 +21,11 @@
       border: 1px solid $grey;
       padding: 1rem;
       font-weight: 400;
-      font-size: 1.7rem;
+      font-size: 1.5rem;
       margin-top: 0.5rem;
+      @media #{$tablet} {
+        font-size: 1.3rem;
+      }
     }
   }
 }
