--- a/src/app/components/hero/hero.module.scss
+++ b/src/app/components/hero/hero.module.scss
@@ -4,8 +4,35 @@
   height: 100vh;
   top: 0;
   z-index: -1;
-  &__image {
+  &__wrapperVideo {
+    width: 100%;
+    height: 100vh;
+    position: relative;
     z-index: 0;
+    svg {
+      position: absolute;
+      z-index: 100;
+      right: 120px;
+      width: 700px;
+      height: 700px;
+      @media #{$wide} {
+        width: 500px;
+        height: 500px;
+        right: 50px;
+      }
+      path {
+        stroke-width: 0.2px;
+      }
+    }
+
+    video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  &__image {
+    z-index: -1;
     width: 100%;
     height: auto;
     object-fit: cover;
