--- a/src/app/lavora_con_noi/style.module.scss
+++ b/src/app/lavora_con_noi/style.module.scss
@@ -6,6 +6,9 @@
     padding: 3rem;
     background-color: #b8c5d5;
     gap: 1rem;
+    @media #{$phone} {
+      flex-direction: column;
+    }
     p {
       font-size: 1.4rem;
       font-weight: 400;
@@ -17,8 +20,15 @@
     padding: 3rem;
     justify-content: space-between;
     background-color: #eef2f7;
+    gap: 1rem;
+    @media #{$tablet} {
+      flex-direction: column;
+    }
     h3 {
       margin-bottom: 0;
+      @media #{$tablet} {
+        font-size: 1.5rem;
+      }
     }
     ul {
       li {
@@ -30,11 +40,22 @@
 .info,
 .form {
   max-width: 990px;
-  margin: 0 auto;
+  margin: 5rem auto;
+}
+.info {
+  h2 {
+    font-size: 40px;
+    text-indent: 0px;
+    padding-left: 0rem;
+    line-height: 1;
+    @media #{$landscape} {
+      padding-left: 1rem;
+    }
+  }
 }
 section.form {
   margin-top: 5rem;
-  padding: 1rem;
+  padding: 1rem 1rem 0rem 1rem;
   border: 1px solid #d7d7d7;
   h2 {
     text-align: center;
