--- a/src/app/sass/global.scss
+++ b/src/app/sass/global.scss
@@ -29,7 +29,7 @@ p {
   font-size: $size-p;
   font-weight: 200;
   margin: 0;
-  line-height: $size-p + ($size-p/2);
+  line-height: $size-p + ($size-p/1.7);
   @media #{$landscape} {
     font-size: $size-p / 1.1;
     padding: 0 1rem;
@@ -50,4 +50,17 @@ button {
 .innerPage {
   max-width: 1120px;
   margin: 0 auto;
+  padding: 0 1rem;
+  h1 {
+    text-indent: -40px;
+  }
+}
+.mainImage {
+  width: 100%;
+  height: 485px;
+  overflow: hidden;
+  position: relative;
+}
+#contatti {
+  scroll-behavior: smooth;
 }
