--- a/src/app/home.module.scss
+++ b/src/app/home.module.scss
@@ -241,8 +241,8 @@
   }
 }
 .fourthSectionHome {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
   &__wrapper {
     position: relative;
     max-width: 1822px;
