--- a/src/app/components/form/form.module.scss
+++ b/src/app/components/form/form.module.scss
@@ -1,7 +1,13 @@
 .success {
   padding: 1rem;
-  background-color: rgb(239, 239, 239);
+  background-color: $darkblue;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
   h3 {
+    font-size: 2rem;
+    margin-top: 0;
     margin-bottom: 0;
   }
   p {
@@ -42,6 +48,11 @@ form.form {
     margin-right: 0;
     margin-left: auto;
     cursor: pointer;
+    &:disabled {
+      background-color: $blue;
+      border: 1px solid $darkblue;
+      color: $darkblue;
+    }
   }
   p {
     margin: 0.5rem 0;
