--- a/src/app/lavora_con_noi/style.module.scss
+++ b/src/app/lavora_con_noi/style.module.scss
@@ -55,7 +55,7 @@
 }
 section.form {
   margin-top: 5rem;
-  padding: 1rem 1rem 0rem 1rem;
+  padding: 1rem;
   border: 1px solid #d7d7d7;
   h2 {
     text-align: center;
