--- a/src/app/azienda/style.module.scss
+++ b/src/app/azienda/style.module.scss
@@ -5,6 +5,12 @@
 }
 .secondSection {
   margin-bottom: 5rem;
+  @media #{$landscape} {
+    padding-left: 1rem;
+  }
+  h2 {
+    margin-bottom: 1rem;
+  }
   ul {
     li {
       font-size: 1.5rem;
