--- a/src/app/components/form/form.module.scss
+++ b/src/app/components/form/form.module.scss
@@ -1,10 +1,11 @@
 .success {
   padding: 1rem;
   background-color: $darkblue;
-  position: fixed;
+  margin-bottom: 2rem;
+  /* position: fixed;
   left: 50%;
   top: 50%;
-  transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%); */
   h3 {
     font-size: 2rem;
     margin-top: 0;
@@ -21,7 +22,7 @@ form.form {
   grid-column: span 3;
   background-color: $blue;
   padding: 1rem 2rem;
-  margin-top: 2rem;
+  margin: 2rem 0;
 
   color: white;
   input,
