--- a/src/app/components/hero/hero.module.scss
+++ b/src/app/components/hero/hero.module.scss
@@ -1,14 +1,21 @@
 .hero {
-  position: absolute;
+  position: relative;
   width: 100%;
   height: 100vh;
-  top: 0;
+  margin-top: -210px;
+  margin-bottom: 5rem;
   z-index: -1;
+  @media #{$landscape} {
+    height: 50vh;
+  }
   &__wrapperVideo {
     width: 100%;
     height: 100vh;
     position: relative;
     z-index: 0;
+    @media #{$landscape} {
+      display: none;
+    }
     svg {
       position: absolute;
       z-index: 100;
@@ -31,7 +38,16 @@
       object-fit: cover;
     }
   }
+  &__wrapperImg {
+    display: none;
+    height: 300px;
+    overflow: hidden;
+    @media #{$landscape} {
+      display: block;
+    }
+  }
   &__image {
+    position: relative;
     z-index: -1;
     width: 100%;
     height: auto;
