--- a/src/app/components/navbar/nav.module.scss
+++ b/src/app/components/navbar/nav.module.scss
@@ -1,10 +1,24 @@
 .header {
   position: relative;
   padding: 0 1rem;
+  z-index: 200;
   &__home {
     background: linear-gradient(rgb(10, 43, 82) 7%, rgb(50 92 175 / 0%) 100%);
     .mainNavBar {
       padding-bottom: 5rem;
+      a {
+        &:hover {
+          color: white;
+        }
+      }
+    }
+    .mainNavBar__navBlock__topData {
+      a {
+        color: white;
+        &:hover {
+          color: white;
+        }
+      }
     }
   }
 }
@@ -61,15 +75,13 @@
         font-weight: 400;
         letter-spacing: 1px;
         &:hover {
-          color: #e5794b;
+          color: $navyBlue;
         }
       }
       @media #{$landscape} {
         display: none;
       }
     }
-  }
-  &__logo {
   }
 }
 .burger {
@@ -99,6 +111,9 @@
   ul {
     margin: 1rem 0;
     text-align: center;
+    li {
+      margin: 0.4rem 0;
+    }
   }
   &__generic {
     font-size: 1rem;
@@ -109,4 +124,11 @@
     color: white;
     text-decoration: underline;
   }
+  .activeLink {
+    background-color: $navyBlue;
+    padding: 0rem 1rem 0.2rem 1rem;
+  }
+}
+.activeLink {
+  border-bottom: 1px solid $navyBlue;
 }
