--- a/src/app/sass/global.scss
+++ b/src/app/sass/global.scss
@@ -4,6 +4,15 @@ body {
 * {
   box-sizing: border-box;
 }
+a {
+  color: $darkblue;
+  &:hover {
+    color: $darkblue;
+  }
+}
+strong {
+  font-weight: 400;
+}
 h1,
 h2 {
   font-weight: 400;
