--- a/src/app/vts_usa_inc/style.module.scss
+++ b/src/app/vts_usa_inc/style.module.scss
@@ -7,8 +7,14 @@
     font-size: 2rem;
     margin-bottom: 0;
     margin-top: 1rem;
+    @media #{$landscape} {
+      padding-left: 1rem;
+    }
   }
   ul {
     font-size: $size-p;
+    @media #{$landscape} {
+      padding-left: 1rem;
+    }
   }
 }
