--- a/src/app/components/scrollTop/scrollTop.module.scss
+++ b/src/app/components/scrollTop/scrollTop.module.scss
@@ -4,4 +4,10 @@
   right: 20px;
   z-index: 1000;
   font-size: 2rem;
+  border: 1px solid $blue;
+  text-align: center;
+  padding-top: 2px;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
 }
