--- a/src/components/cards/cardsLavora.module.scss
+++ b/src/components/cards/cardsLavora.module.scss
@@ -5,13 +5,20 @@
   @media #{$tablet} {
     flex-direction: column;
   }
+  li {
+    flex: 1;
+  }
   &__image {
     max-width: 535px;
     width: 100%;
-    object-fit: cover;
+
+    height: 196px;
     @media #{$tablet} {
       max-width: 100%;
     }
+  }
+  img {
+    object-fit: cover;
   }
   a {
     color: black;
