--- a/src/components/languageSwitcer/switcher.module.scss
+++ b/src/components/languageSwitcer/switcher.module.scss
@@ -1,6 +1,9 @@
 .switcher {
+  &__home {
+    color: white;
+  }
   background-color: transparent;
-  color: white;
+  color: black;
   border: none;
   text-transform: uppercase;
   option {
