--- a/src/app/[locale]/home.module.scss
+++ b/src/app/[locale]/home.module.scss
@@ -30,7 +30,7 @@
     margin: 0 auto;
   }
   &__text {
-    max-width: 930px;
+    max-width: 990px;
     margin: 0 auto;
     &__content {
       display: grid;
@@ -56,7 +56,7 @@
         }
       }
       ul {
-        padding: 2rem 0rem 2rem 2rem;
+        padding: 0rem 0rem 2rem 2rem;
         @media #{$tablet} {
           padding: 2rem 0 0 0;
           text-align: center;
@@ -78,7 +78,7 @@
 }
 .secondSectionHome {
   max-width: 1411px;
-  margin: 0 auto 3rem auto;
+  margin: 4rem auto 3rem auto;
   position: relative;
 
   &__mainText {
