--- a/src/components/languageSwitcer/switcher.module.scss
+++ b/src/components/languageSwitcer/switcher.module.scss
@@ -1,4 +1,22 @@
+.wrapperSwitcher {
+  display: flex;
+  flex-direction: row-reverse;
+  position: relative;
+  width: 30px;
+}
+
 .switcher {
+  overflow: hidden;
+  height: 20px;
+  pointer-events: none;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  cursor: pointer;
+  &__open {
+    height: auto;
+    pointer-events: all;
+  }
   &__home {
     color: white;
   }
@@ -9,4 +27,9 @@
   option {
     background-color: transparent;
   }
+}
+.icon {
+  font-size: 1rem;
+  color: black;
+  cursor: pointer;
 }
