fix dimensione header pagina interne

--- a/src/app/sass/global.scss
+++ b/src/app/sass/global.scss
@@ -74,6 +74,17 @@ button,
   height: 485px;
   overflow: hidden;
   position: relative;
+  @media #{$tablet} {
+    height: auto;
+  }
+  img {
+    object-fit: cover;
+
+    @media #{$tablet} {
+      object-fit: contain;
+      position: relative !important;
+    }
+  }
 }
 #contatti {
   scroll-behavior: smooth;
