--- a/src/app/sass/global.scss
+++ b/src/app/sass/global.scss
@@ -89,3 +89,13 @@ button,
 #contatti {
   scroll-behavior: smooth;
 }
+.p404 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  h1 {
+    font-size: 3rem;
+  }
+}
