fix minori stile

--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -35,6 +35,9 @@
   }
   &__fourth {
     justify-self: center;
+    @media #{$landscape} {
+      justify-self: flex-start;
+    }
     h3 {
       margin-bottom: 0.5rem;
     }
