--- a/src/components/navbar/nav.module.scss
+++ b/src/components/navbar/nav.module.scss
@@ -108,6 +108,11 @@
   flex-direction: column;
   font-size: 1.5rem;
   z-index: 100;
+  &__nav {
+    &__switcher {
+      position: relative;
+    }
+  }
   ul {
     margin: 1rem 0;
     text-align: center;
