--- a/src/components/splash/splash.module.scss
+++ b/src/components/splash/splash.module.scss
@@ -4,9 +4,17 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 100;
-  background-color: $blue;
+  z-index: 2000;
+  background-color: $darkblue;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  &__svgwrapper {
+    max-width: 200px;
+    svg {
+      width: 100%;
+      height: auto;
+    }
+  }
 }
